# texlive-source

./: .svnignore  .travis.yml  Build  ChangeLog  Makefile.am  Makefile.in  Makefile.in.orig  README  README.1prerequisites  README.2building  README.3installing  README.4layout  README.5configure  README.6cross  README.branch2011  README.coding  README.config  README.cross  README.distro  README.hacking  README.layout  README.md  README.orig  README.solaris  TeX-Makefile.in  TeX-configure  TeX-configure.in  WARNING  aclocal.m4  configure  configure.ac  configure.in  configure.in.orig  multiplatform.ac  reautoconf  reautoconf.texk  selfautofix  stamp-aclocal  stamp-configure  tardate.ac  (+5 more)
doc/: ChangeLog  Makefile.am  Makefile.in  README.solaris  build-info.sh  build-tools  build-tools.txt  build.texi  buildinfo.sh  splitinfo.gawk  texlive.info  texlive.ps  texlive.texi  tlbuild.info  tlbuild.texi
doc/tlbuild-incl/: install-tl.texi  tlmgr.texi
libs/: ChangeLog  EXTRA.LIB  Makefile.am  Makefile.in  README  README.orig  aclocal.m4  configure  configure.ac  configure.in  configure.in.orig  stamp-aclocal  stamp-configure  win32.mak
libs/ac/: withenable.ac
libs/am/: hdr_links.am
libs/cairo/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  cairo.test  cairotst.c  configure  configure.ac  version.ac
libs/curl/: Makefile  Makefile.am  Makefile.in  aclocal.m4  build_vms.com  configure  configure.in  curl-config.in  win32.mak
libs/dummy/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
libs/expat/: configure  win32.mak
libs/freetype/: .cvsignore  ChangeLog  FILES  INSTALL  Makefile.am  Makefile.in  PATENTS  aclocal.m4  announce  configure  configure.ac  configure.in  freetype.ac  ft_conf.h.in  mkinstalldirs  net.m4  readme.1st  win32.mak  withenable.ac
libs/freetype2/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  freetype2.ac  version.ac  win32.mak  withenable.ac
libs/gd/: ChangeLog  Makefile.am  Makefile.in  Makefile.in.orig  README  aclocal.m4  config.h.in  config.hin  configure  configure.ac  configure.in  gd.ac  gdtest.c  libgd.test  stamp-aclocal  stamp-configure  version.ac  withenable.ac
libs/gmp/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  version.ac
libs/graphite/: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  build_d.bat  configure  configure.ac  graphite-engine.ac  makefile.vc  version.ac
libs/graphite-engine/: Makefile.am  Makefile.in  README  aclocal.m4  build.bat  configure  configure.ac  makefile.vc  uninstalled-top.pc.in  withenable.ac
libs/graphite2/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  gr2test.c  graphite2.test  version.ac
libs/harfbuzz/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  harfbuzz.test  hbtest.c  version.ac
libs/howto/: freetype  freetype2  icu-xetex  libpng  libtiff  ncurses  ncurses-fix  t1lib  teckit  xpdf  zlib
libs/icu/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  hdrs.am  icu.test  icutest.c  version.ac
libs/icu-xetex/: README  configure  icu-xetex.ac  withenable.ac
libs/jpeg/: depend.mak  jconfig.vc  libjpeg.rc  win32.mak
libs/libgnuw32/: Makefile.in  configure.in  depend.mak  dirent.c  error.c  filename.c  gnuw32.c  home.c  libgnuw32.rc  lookcmd.c  oldnames.h  popen.c  stat.c  string.c  system.c  system_popen_check.c  time.c  user.c  volume.c  win32.mak  win32lib.h
libs/libgsw32/: depend.mak  ghostscr.c  gs32lib.h  gsdll.h  gvwgsver.c  gvwgsver.h  win32.mak
libs/libpaper/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  paper.test
libs/libpng/: ANNOUNCE  CHANGES  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  Y2KINFO  aclocal.m4  config.h.in  configure  configure.ac  depend.mak  libpng.3  libpng.ac  libpng.rc  libpng.test  libpng.txt  libpngpf.3  png.5  png.c  png.h  pngconf.h  version.ac  win32.mak  withenable.ac
libs/libttf/: depend.mak  freetype.h  ft_conf.h  fterrid.h  ftnameid.h  header.h  libttf.rc  ttapi.c  ttcache.c  ttcache.h  ttcalc.c  ttcalc.h  ttcmap.c  ttcmap.h  ttconfig.h  ttdebug.h  ttengine.h  ttextend.c  ttextend.h  ttfile.c  ttfile.h  ttgload.c  ttgload.h  ttinterp.c  ttinterp.h  ttload.c  ttload.h  ttmemory.c  ttmemory.h  ttmutex.c  ttmutex.h  ttobjs.c  ttobjs.h  ttraster.c  ttraster.h  tttables.h  tttags.h  tttypes.h  win32.mak
libs/lua51/: Makefile  lapi.c  lcoco.c  liolib.c  llimits.h  lstrlib.c  luaconf.h
libs/lua52/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  luaerror.test  luatest.c  version.ac
libs/lua53/: Makefile.in  aclocal.m4  configure
libs/luafilesystem/: Makefile
libs/luafontforge/: Makefile
libs/luajit/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  jittest.c  luajiterr.test  texluajit.pc.in  version.ac
libs/luamd5/: md5.c
libs/luazlib/: lzlib.c
libs/lz4/: ChangeLog  Makefile.am  configure.ac  version.ac
libs/md5/: depend.mak  win32.mak
libs/mpfi/: Makefile.am  configure.ac
libs/mpfr/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  version.ac
libs/ncurses/: INSTALL  MANIFEST  Makefile.in  NEWS  TO-DO  aclocal.m4  configure  configure.in  dist.mk  mk-0th.awk  mk-1st.awk  mk-2nd.awk  ncurses.ac  withenable.ac
libs/obsdcompat/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  defines.h  includes.h  libobsd-compat.ac  openbsd-compat.h
libs/paper/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  paper.test  version.ac
libs/pixman/: ChangeLog  README  (+10 more)
texk/: .gitattributes  ChangeLog  Makefile.am  Makefile.in  README  README.TL  aclocal.m4  add-info-toc  autoconf2.13  configure  configure.ac  configure.in  libtool.m4  stamp-aclocal  stamp-configure  win32.mak  withenable.ac
utils/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  win32.mak
(+14882 files in other folders)
